--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
-    "functions": {
-      "api/*.php": {
-        "runtime": "vercel-php@0.5.2"
-      }
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.5.2"
     }
+  },
+  "headers": [
+    {
+      "source": "/api/(.*)",
+      "headers": [
+        {
+          "key": "Access-Control-Allow-Origin",
+          "value": "*"
+        }
+      ]
+    }
+  ]
 }
