--- a/vercel.json
+++ b/vercel.json
@@ -11,6 +11,10 @@
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
+        },
+        {
+          "key": "Content-Type",
+          "value": "application/json"
         }
       ]
     }
